--- a/yolov9/bananas_dataset/data.yaml
+++ b/yolov9/bananas_dataset/data.yaml
@@ -1,13 +1,7 @@
-train: ../train/images
-val: ../valid/images
-test: ../test/images
+train: bananas_dataset/train/images
+val: bananas_dataset/valid/images
+test: bananas_dataset/test/images
 
 nc: 6
 names: ['Execivamente Madura', 'Madura', 'Muito Madura', 'Podre', 'Quase Madura', 'Verde']
 
-roboflow:
-  workspace: aoop-k2hkm
-  project: banana-ukhjt
-  version: 3
-  license: Private
-  url: https://app.roboflow.com/aoop-k2hkm/banana-ukhjt/3
